--- a/index.html
+++ b/index.html
@@ -128,7 +128,12 @@
     <div class="navbar navbar-default" role="navigation">
 
         <div class="navbar-inner">
-
+            <button type="button" class="navbar-toggle pull-left animated flip">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
 
             <div class="btn-group pull-right">
                 <button class="btn btn-default dropdown-toggle" data-toggle="dropdown">
