testing mobile thingy

--- a/anatomija_telesa_moski.html
+++ b/anatomija_telesa_moski.html
@@ -155,7 +155,7 @@
 
 
             <div class="row">
-                <div class="box col-md-12">
+                <div class="box col-md-12 col-lg-12 col-sm-12">
                     <div class="box-inner">
                         <div class="box-header well" data-original-title="">
                             <h2><i class="glyphicon glyphicon-picture"></i> Anatomija moškega</h2>
@@ -173,7 +173,7 @@
                             <div class="center-image">
                                 <a href="javascript:rotatePictureBody()" class="rotate-button"></a>
                                 <div id="img">
-                                    <img src="images/front_body.png" id="front" usemap="front-map">
+                                    <img src="images/front_body.png" id="front"">
                                 </div>
                             </div>
                         </div>
@@ -187,29 +187,7 @@
         </div><!--/#content.col-md-0-->
     </div><!--/fluid-row-->
 
-    <!-- Ad, you can remove it -->
-    <div class="row">
-        <div class="col-md-9 col-lg-9 col-xs-9  hidden-xs">
-            <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-            <!-- Charisma Demo 2 -->
-            <ins class="adsbygoogle"
-                 style="display:inline-block;width:728px;height:90px"
-                 data-ad-client="ca-pub-5108790028230107"
-                 data-ad-slot="3193373905"></ins>
-            <script>
-                (adsbygoogle = window.adsbygoogle || []).push({});
-            </script>
-        </div>
-        <div class="col-md-2 col-lg-3 col-sm-12 col-xs-12 donate">
-            <div>
-                <small>Help development of Charisma</small>
-            </div>
-            <a class="btn btn-default" href="http://flattr.com/thing/1507720/usmanhalalitcharisma-on-GitHub"
-               target="_blank"><i class="glyphicon glyphicon-usd green"></i> Donate</a>
-        </div>
-
-    </div>
-    <!-- Ad ends -->
+    
 
     <hr>
 
