--- a/anatomija_telesa_moski.html
+++ b/anatomija_telesa_moski.html
@@ -169,7 +169,7 @@
                                         class="glyphicon glyphicon-remove"></i></a>
                             </div>
                         </div>
-                        <div class="box-content">
+                        <div class="box-content" id="center-image">
                             <div class="center-image">
                                 <a href="javascript:rotatePictureBody()" class="rotate-button"></a>
                                 
