--- a/front-body.html
+++ b/front-body.html
@@ -1,9 +1,4 @@
 <a href="javascript:rotatePictureBody()" class="rotate-button"></a>
 <div id="img">
-    <img src="images/front_body.png" id="front" usemap="front-map">
+    <img src="images/front_body.png" id="front">
 </div>
-
-<map name="front-map">
-    <area shape="rect" coords="250,250,400,600" alt="Mercury" href="javascript:alert('hahahahah wokrs!')">
-</map>
-
