--- a/anatomija_telesa_moski.html
+++ b/anatomija_telesa_moski.html
@@ -169,11 +169,11 @@
                                         class="glyphicon glyphicon-remove"></i></a>
                             </div>
                         </div>
-                        <div class="box-content box col-md-12 col-lg-12 col-sm-12" id="center-image">
+                        <div class="box-content box col-md-12 col-lg-12 col-sm-12">
                             <div class="center-image">
                                 <a href="javascript:rotatePictureBody()" class="rotate-button"></a>
                                 
-                                    <img src="images/front_body.png" id="front"">
+                                    <img src="images/front_body.png" id="front">
                                 
                             </div>
                         </div>
