--- a/slike.html
+++ b/slike.html
@@ -234,7 +234,7 @@ topbar ends -->
 
         <div id="content" class="col-lg-10 col-sm-10">
             <div class="row">
-                <div class="box col-md-12">
+                <div class="box col-md-12 col-lg-12 col-sm-12">
                     <div class="box-inner">
                         <div class="box-header well">
                             <h2><i class="glyphicon glyphicon-info-sign"></i> Slike vašega telesa</h2>
@@ -254,7 +254,7 @@ topbar ends -->
                         </div>
                     </div>
                 </div>
-                <div class="box col-md-12">
+                <div class="box col-md-12 col-lg-12 col-sm-12">
                     <div class="box-inner">
                         <div class="box-header well">
                             <h2><i class="glyphicon glyphicon-picture"></i> Prosimo izberite področje telesa</h2>
