--- a/back-body.html
+++ b/back-body.html
@@ -1,4 +1,4 @@
 <a href="javascript:rotatePictureBodyBack()" class="rotate-button"></a>
 <div id="img">
-    <img src="images/back_body.png">
+    <img src="images/back_body.png" id="back">
 </div>
