--- a/slike.html
+++ b/slike.html
@@ -254,6 +254,8 @@ topbar ends -->
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="row">
                 <div class="box col-md-12 col-lg-12 col-sm-12">
                     <div class="box-inner">
                         <div class="box-header well">
