--- a/izvidi.html
+++ b/izvidi.html
@@ -25,8 +25,7 @@
     <link id="bs-css" href="css/bootstrap-cerulean.min.css" rel="stylesheet">
 
     <link href="css/charisma-app.css" rel="stylesheet">
-    <link href='bower_components/fullcalendar/dist/fullcalendar.css' rel='stylesheet'>
-    <link href='bower_components/fullcalendar/dist/fullcalendar.print.css' rel='stylesheet' media='print'>
+
     <link href='bower_components/chosen/chosen.min.css' rel='stylesheet'>
     <link href='bower_components/colorbox/example3/colorbox.css' rel='stylesheet'>
     <link href='bower_components/responsive-tables/responsive-tables.css' rel='stylesheet'>
@@ -44,15 +43,88 @@
 
     <!-- The HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
-    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+
     <![endif]-->
 
     <!-- The fav icon -->
-    <link rel="shortcut icon" href="img/favicon.ico">
+
 
 </head>
 
 <body>
+<!-- topbar starts
+<div class="navbar navbar-default" role="navigation">
+
+    <div class="navbar-inner">
+        <button type="button" class="navbar-toggle pull-left animated flip">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="index.html"> <img alt="Charisma Logo" src="img/logo20.png" class="hidden-xs"/>
+            <span id="charisma">Charisma</span></a>
+
+
+        <div class="btn-group pull-right">
+            <button class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+                <i class="glyphicon glyphicon-user"></i><span class="hidden-sm hidden-xs" id="up-ime-tag"> admin</span>
+                <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu">
+                <li><a href="login.html"><span class="glyphicon glyphicon-off"></span>  Izpiši me</a></li>
+            </ul>
+        </div>
+
+
+
+        <div class="btn-group pull-right theme-container animated tada">
+            <button class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+                <i class="glyphicon glyphicon-tint"></i><span
+                    class="hidden-sm hidden-xs"> Change Theme / Skin</span>
+                <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu" id="themes">
+                <li><a data-value="classic" href="#"><i class="whitespace"></i> Classic</a></li>
+                <li><a data-value="cerulean" href="#"><i class="whitespace"></i> Cerulean</a></li>
+                <li><a data-value="cyborg" href="#"><i class="whitespace"></i> Cyborg</a></li>
+                <li><a data-value="simplex" href="#"><i class="whitespace"></i> Simplex</a></li>
+                <li><a data-value="darkly" href="#"><i class="whitespace"></i> Darkly</a></li>
+                <li><a data-value="lumen" href="#"><i class="whitespace"></i> Lumen</a></li>
+                <li><a data-value="slate" href="#"><i class="whitespace"></i> Slate</a></li>
+                <li><a data-value="spacelab" href="#"><i class="whitespace"></i> Spacelab</a></li>
+                <li><a data-value="united" href="#"><i class="whitespace"></i> United</a></li>
+            </ul>
+        </div>
+
+
+        <ul class="collapse navbar-collapse nav navbar-nav top-menu">
+            <li><a href="#"><i class="glyphicon glyphicon-globe"></i> Visit Site</a></li>
+            <li class="dropdown">
+                <a href="#" data-toggle="dropdown"><i class="glyphicon glyphicon-star"></i> Dropdown <span
+                        class="caret"></span></a>
+                <ul class="dropdown-menu" role="menu">
+                    <li><a href="#">Action</a></li>
+                    <li><a href="#">Another action</a></li>
+                    <li><a href="#">Something else here</a></li>
+                    <li class="divider"></li>
+                    <li><a href="#">Separated link</a></li>
+                    <li class="divider"></li>
+                    <li><a href="#">One more separated link</a></li>
+                </ul>
+            </li>
+            <li>
+                <form class="navbar-search pull-left">
+                    <input placeholder="Search" class="search-query form-control col-md-10" name="query"
+                           type="text">
+                </form>
+            </li>
+        </ul>
+
+    </div>
+</div>
+topbar ends -->
+
 <div class="navbar navbar-default" role="navigation">
 
     <div class="navbar-inner">
@@ -83,12 +155,14 @@
     <a href="index.html" style="text-decoration: none;">
         <div align="center">
             <h4><font color="blue"><span id="naslovnoIme">Gašper Andrejc</span></font>
-                <small><font color="#6495ed">in moj e-zdravnik</font></small><img src="images/e-doc-logo.png"></h4>
+                <small><font color="#6495ed">in moj e-Zdravnik</font></small><img src="images/e-doc-logo.png"></h4>
 
         </div>
     </a>
     <div id="logout"></div>
 </div>
+
+
 <div class="ch-container">
     <div class="row">
 
@@ -154,41 +228,59 @@
         </noscript>
 
         <div id="content" class="col-lg-10 col-sm-10">
-            <!-- content starts -->
-
-
             <div class="row">
                 <div class="box col-md-12 col-lg-12 col-sm-12">
                     <div class="box-inner">
                         <div class="box-header well" data-original-title="">
-                            <h2><i class="glyphicon glyphicon-picture"></i> Anatomija moškega</h2>
+                            <h2><i class="glyphicon glyphicon-list"></i> Moji izvidi</h2>
 
-                            <div class="box-icon">
-                                <a href="#" class="btn btn-setting btn-round btn-default"><i
-                                        class="glyphicon glyphicon-cog"></i></a>
+                            <div class="box-icon row">
+
+                                <div class="col-md-8 col-lg-8 col-sm-8" style="padding-right: 0;">
+                                    <input class="form-control input-sm" id="ime-mape" placeholder="Dodaj novo">
+                                </div>
+                                <div class="col-md-2 col-lg-2 col-sm-2" style="padding: 0;">
+                                    <a href="#" class="btn btn-add btn-round btn-default" data-toggle="tooltip" title="Dodaj novo mapo."><i
+                                            class="glyphicon glyphicon-plus"></i></a>
+
+                                </div>
                                 <a href="#" class="btn btn-minimize btn-round btn-default"><i
                                         class="glyphicon glyphicon-chevron-up"></i></a>
-                                <a href="#" class="btn btn-close btn-round btn-default"><i
-                                        class="glyphicon glyphicon-remove"></i></a>
+
+
+
+
+
+
                             </div>
                         </div>
-                        <div class="box-content box col-md-12 col-lg-12 col-sm-12">
-                            <div class="center-image">
-                                <a href="javascript:rotatePictureBody()" class="rotate-button"></a>
-
-                                <img src="images/front_body.png" id="front">
-
+                        <div class="box-content box">
+                            <div class="row" id="vsiIzvidi">
+                                <div class="box col-md-4 col-lg-4 col-sm-4">
+                                    <a href="javascript:void(0)" class="folder-image">Ortodont</a>
+                                </div>
+                                <div class="box col-md-4 col-lg-4 col-sm-4">
+                                    <a href="javascript:void(0)" class="folder-image">Dermatolog</a>
+                                </div>
+                                <div class="box col-md-4 col-lg-4 col-sm-4">
+                                    <a href="javascript:void(0)" class="folder-image">Urolog</a>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
                 <!--/span-->
 
-            </div><!--/row-->
+                </div>
+            </div>
 
-            <!-- content ends -->
-        </div><!--/#content.col-md-0-->
-    </div><!--/fluid-row-->
+
+
+
+        <!-- content ends -->
+    </div>
+        </div>
+<!--/fluid-row-->
+
 
 
     <hr>
@@ -214,14 +306,14 @@
     </div>
 
     <footer class="row">
-        <p class="col-md-9 col-sm-9 col-xs-12 copyright">&copy; <a href="http://usman.it" target="_blank">Muhammad
-            Usman</a> 2012 - 2014</p>
+        <p class="col-md-9 col-sm-9 col-xs-12 copyright">&copy; <a href="https://ucilnica.fri.uni-lj.si/user/profile.php?id=14408" target="_blank">Gašper Andrejc</a> e-Zdravje projekt pri OIS</p>
 
         <p class="col-md-3 col-sm-3 col-xs-12 powered-by">Powered by: <a
                 href="http://usman.it/free-responsive-admin-template">Charisma</a></p>
     </footer>
 
-</div><!--/.fluid-container-->
+    </div>
+<!--/.fluid-container-->
 
 <!-- external javascript -->
 
@@ -229,9 +321,7 @@
 
 <!-- library for cookie management -->
 <script src="js/jquery.cookie.js"></script>
-<!-- calender plugin -->
-<script src='bower_components/moment/min/moment.min.js'></script>
-<script src='bower_components/fullcalendar/dist/fullcalendar.min.js'></script>
+
 <!-- data table plugin -->
 <script src='js/jquery.dataTables.min.js'></script>
 
@@ -258,6 +348,10 @@
 <!-- application script for Charisma demo -->
 <script src="js/charisma.js"></script>
 <script src="js/index.js"></script>
+<script src="js/jquery.bootstrap-autohidingnavbar.js"></script>
+<script src="js/odpriIzvide.js"></script>
+
+
 
 </body>
 </html>
