--- a/alergije.html
+++ b/alergije.html
@@ -257,8 +257,8 @@ topbar ends -->
                                 <td>Spomladi</td>
                             </tr>
                             <tr>
-                                <td>Alergija na tečne ženske</td>
-                                <td>Zamašen nos, kihanje</td>
+                                <td>Alergija na kiwi</td>
+                                <td>Zatečen jezik</td>
                                 <td>Še ni odkrito</td>
                                 <td>15 let</td>
                                 <td>Non-stop</td>
